<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true">
	
	<android.support.design.widget.AppBarLayout
			android:id="@+id/album_detail_appbar"
			android:layout_width="match_parent"
			android:layout_height="256dp"
			android:fitsSystemWindows="true"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			android:background="@color/colorBlue800">
		
		<android.support.design.widget.CollapsingToolbarLayout
				android:id="@+id/album_detail_collapsing_toolbar"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fitsSystemWindows="true"
				app:contentScrim="@color/colorBlue800"
				app:layout_scrollFlags="scroll|exitUntilCollapsed">
			
			<ImageView
					android:id="@+id/album_detail_expanded_cover"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:fitsSystemWindows="true"
					android:scaleType="centerCrop"
					android:transitionName="@string/transition_name"
					android:contentDescription="@string/album_cover_expanded"
					android:adjustViewBounds="true"
					tools:ignore="UnusedAttribute"
					app:layout_collapseMode="parallax"
					app:layout_collapseParallaxMultiplier="0.7" />
			
			<android.support.v7.widget.Toolbar
					android:id="@+id/album_detail_toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					app:layout_collapseMode="pin"
					app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
			
			</android.support.v7.widget.Toolbar>
		
		</android.support.design.widget.CollapsingToolbarLayout>
	
	</android.support.design.widget.AppBarLayout>
	
	<android.support.v4.widget.NestedScrollView
			android:id="@+id/album_detail_main_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">
		
		<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
			
			<android.support.v7.widget.AppCompatButton
					android:id="@+id/album_detail_see_on_site_button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/see_on_site"
					android:layout_margin="24dp"
					android:padding="4dp"
					style="@style/AppBaseTheme.Button"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			<android.support.v7.widget.CardView
					android:id="@+id/album_detail_artist_card"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintTop_toBottomOf="@id/album_detail_see_on_site_button"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:cardCornerRadius="4dp">
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:padding="12dp">
					
					<TextView
							android:id="@+id/album_detail_artist"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="12dp"
							android:layout_marginLeft="12dp"
							android:textSize="18sp"
							android:textColor="@color/colorGrey800" />
				</FrameLayout>
			</android.support.v7.widget.CardView>
			
			<android.support.v7.widget.CardView
					android:id="@+id/album_detail_year_card"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/album_detail_artist_card"
					app:cardElevation="4dp">
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:padding="12dp">
					
					<TextView
							android:id="@+id/album_detail_year"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="12dp"
							android:layout_marginLeft="12dp"
							android:textSize="18sp"
							android:textColor="@color/colorGrey800" />
				</FrameLayout>
			</android.support.v7.widget.CardView>
			
			<android.support.v7.widget.CardView
					android:id="@+id/album_detail_price_card"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/album_detail_year_card"
					app:cardElevation="4dp">
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:padding="12dp">
					
					<TextView
							android:id="@+id/album_detail_price"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="12dp"
							android:layout_marginLeft="12dp"
							android:textSize="18sp"
							android:textColor="@color/colorGrey800" />
				</FrameLayout>
			</android.support.v7.widget.CardView>
			
			<android.support.v7.widget.CardView
					android:id="@+id/album_detail_genre_card"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/album_detail_price_card"
					app:cardElevation="4dp">
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:padding="12dp">
					
					<TextView
							android:id="@+id/album_detail_genre"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="12dp"
							android:layout_marginLeft="12dp"
							android:textSize="18sp"
							android:textColor="@color/colorGrey800" />
				</FrameLayout>
			</android.support.v7.widget.CardView>
			
			<android.support.v7.widget.CardView
					android:id="@+id/album_detail_tracks_count_card"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/album_detail_genre_card"
					app:cardElevation="4dp">
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:padding="12dp">
					
					<TextView
							android:id="@+id/album_detail_tracks_count"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="12dp"
							android:layout_marginLeft="12dp"
							android:textSize="18sp"
							android:textColor="@color/colorGrey800" />
				</FrameLayout>
			</android.support.v7.widget.CardView>
			
			<TextView
					android:id="@+id/album_detail_list_of_tracks_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/list_of_tracks"
					android:layout_marginTop="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginLeft="16dp"
					android:textColor="@color/colorBlue800"
					android:textSize="16sp"
					android:padding="4dp"
					android:textStyle="bold"
					app:layout_constraintTop_toBottomOf="@+id/album_detail_tracks_count_card"
					app:layout_constraintStart_toStartOf="@+id/album_detail_tracks_count_card" />
			
			<android.support.v7.widget.CardView
					android:id="@+id/album_detail_tracks_card"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:layout_marginBottom="16dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/album_detail_list_of_tracks_text"
					app:layout_constraintBottom_toBottomOf="parent" >
				
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent">
					
					<android.support.v7.widget.RecyclerView
							android:id="@+id/album_detail_tracks_list"
							android:layout_width="match_parent"
							android:layout_height="wrap_content" />
				
				</FrameLayout>
			</android.support.v7.widget.CardView>
		
		</android.support.constraint.ConstraintLayout>
		
	</android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>